--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 			height:100%;
 		}
 		body {
-			background-color:#FFF;
+			background-color:#FFFFFF;
 			margin:0;
 			height:100%;
 		}
@@ -23,8 +23,8 @@
   <body>
 	<!-- copy these lines to your document: -->
 
-	<div id="index_hype_container" class="HYPE_document" style="margin:auto;position:relative;width:600px;height:400px;overflow:hidden;">
-		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?64304"></script>
+	<div id="index_hype_container" style="margin:auto;position:relative;width:600px;height:400px;overflow:hidden;">
+		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?67915"></script>
 	</div>
 
 	<!-- end copy -->
@@ -35,10 +35,7 @@
 
 	<div style="display:none" aria-hidden=true>
 
-		<div>Carne</div>
-		<div>Drink</div>
-		<div>Primi</div>
-		<div>Home
+		<div>home
 </div>
 
 	</div>
